@@ -1,3 +1,9 @@
+2001-10-10  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/devhelp-search.c (devhelp_search_complete_idle): 
+	- call bookshelf_open_document before signaling, fixes
+	  link-clicking problem.
+
 2001-09-04  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/devhelp-window.c (devhelp_window_new): set wmclass.
